feat: prepare for production deployment (docker, vercel, docs)